2007-01-05  Anders Carlsson  <acarlsson@apple.com>

        Reviewed by Maciej.

        The data returned is now a SharedBuffer so wrap it in an NSData object.
        
        * WebView/WebDataSource.mm:
        (-[WebDataSource data]):

2007-01-04  Adam Roben  <aroben@apple.com>

        Reviewed by Geoff, cheered by others.

        Dead code elimination.

        * WebView/WebHTMLView.m:

2007-01-04  Adam Roben  <aroben@apple.com>

        Boo on me for undoing Beth's hard work.

        * WebView/WebHTMLView.m:
        (-[WebHTMLView menuForEvent:]): Undo a mistaken roll out of r18597.

2007-01-04  David Kilzer  <ddkilzer@webkit.org>

        Reviewed by Brady.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12111
          Uninitialized variable in -[WebDefaultPolicyDelegate webView:decidePolicyForMIMEType:request:frame:decisionListener:]

        * DefaultDelegates/WebDefaultPolicyDelegate.m: Initialize isDirectory.

2007-01-04  Adam Roben  <aroben@apple.com>

        Reviewed by Geoff.

        Remove WebKit/AppKit from handling tabbing between subframes.

        * WebCoreSupport/WebChromeClient.h: Added new ChromeClient methods for
        moving focus out of the WebView.
        * WebCoreSupport/WebChromeClient.mm: Ditto.
        (WebChromeClient::canTakeFocus):
        (WebChromeClient::takeFocus):
        * WebCoreSupport/WebFrameBridge.mm:
        (-[WebFrameBridge webView]): Added null-check of m_frame.
        * WebView/WebHTMLView.m: Removed -[WebHTMLView nextValidKeyView].
        (-[WebHTMLView _updateActiveState]): Changed to focus the frame if
        WebCore believes it to be the focused frame.
        (-[WebHTMLView becomeFirstResponder]): Rewrote to call into
        FocusController to place focus correctly within the WebView.

2007-01-04  Anders Carlsson  <acarlsson@apple.com>

        Reviewed by Brady.

        FrameLoaderClient changed yet again.
        
        * WebCoreSupport/WebFrameLoaderClient.h: